@@ -83,6 +83,8 @@ void thcmdline::process(int argc, char * argv[])
     {"print-xtherion-src",no_argument,NULL,THPS_XTHERION_SRC},
     {"use-extern-libs",no_argument,NULL,THPS_EXTERN_LIBS},
     {"reproducible-output",no_argument,NULL,THPS_REPRODUCIBLE},
+    {"generate-output-crc",no_argument,NULL,THPS_CRC_GENERATE},
+    {"verify-output-crc",no_argument,NULL,THPS_CRC_VERIFY},
     {"version",no_argument,NULL,'v'},
     {"bezier",no_argument,NULL,'b'},
     {NULL, 0, NULL, 0}
@@ -140,6 +142,16 @@ void thcmdline::process(int argc, char * argv[])
         
       case THPS_REPRODUCIBLE:
         thcfg.reproducible_output = true;
+        break;
+        
+      case THPS_CRC_GENERATE:
+        thcfg.reproducible_output = true;
+        thcfg.crc_generate = true;
+        break;
+
+      case THPS_CRC_VERIFY:
+        thcfg.reproducible_output = true;
+        thcfg.crc_verify = true;
         break;
 
       //case 'u':
